added comments to Ch3 CS WP

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -77,7 +77,11 @@ All Interior Fraser Coho CUs have the same predominantly 3-year life history, wi
 Finally, we use the estimated S~REP~, which is the spawner abundance at which the stock replaces itself, from a base Ricker model fit (described below and shown in Appendix \@ref(app:coho-appendix)) to look for differences in habitat capacity among CUs. S~REP~ values ranged from 4023 (Fraser Canyon CU) to 14,595 (North Thompson CU), with S~REP~ values for the other three CUs evenly spaced within this range (Middle Fraser  = 6925, Lower Thompson = 8614, South Thompson = 10,498).  Given that there was no clear outlier in terms of extremely low or extremely high capacity, it is unclear whether these five CUs would respond differently to threats based on habitat capacity alone.
 
 Based on similarities in threats, environmental conditions, life history, and habitat capacity, we found no significant indicators that would prevent us from inferring CU status for one CU from neighboring CUs; especially when data from several other CUs are available to represent the missing CU. We do note however that the Fraser Canyon CU may be the most unique in terms of it having the smallest capacity and a more coastal dominated biogeoclimatic zone, so special consideration may be given to cases in which CU-level data is missing from Fraser Canyon.  
-<!--CH: can you add a sentence to the results stating if status against proportion-based or logistic regression-based LRPs were sensitive to the omission of Fraser River Canyon in particular?-->
+<!--CH: I think we can omit the Fraser Canyon sentence; any special characteristics for that CU are not shown in the results. 
+
+You could add:  "While these CUs are similar on these criteria, random variability in population dynamics among CUs can result in differences in status over time."
+
+-->
 
 ## DATA{#cohoData}
 
@@ -239,18 +243,19 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 We present aggregate abundance-based LRPs derived using logistic regressions with two of the Interior Fraser Coho benchmarks considered: S\textsubscript{gen} and the IFCRT-distributional target. Because two different stock recruit models were used to estimate S\textsubscript{gen}, we distinguish these models as 'Logistic:Sgen-Ricker' and 'Logistic:Sgen-priorCap' for the Ricker and Ricker_priorCap models, respectively. We use the label 'Logistic:IFCRT' to denote the case in which the IFCRT distributional target was used to develop the aggregate abundance logistic regression-based LRP.  See Section \@ref(logisticMethods) for an overview of the approach used to calculate aggregate abundance-based LRPs using logistic regression.
 
 
-When estimating logistic regression LRPs using S\textsubscript{gen}, we used an integrated modelling approach in which CU-level S\textsubscript{gen} and the SMU-level LRP were simultaneously estimated. The integrated Sgen-LRP models had two components:  
+When estimating logistic regression LRPs using S\textsubscript{gen}, we used an integrated modelling approach in which CU-level S\textsubscript{gen} and the SMU-level LRP were simultaneously estimated. The integrated S\textsubscript{gen}-LRP models had two components:  
 
-(i)	Stock-recruit models fit to each of the 5 CUs to estimate CU-level Sgen (Equation \@ref(eq:rickerSurv-IM) and Equations \@ref(eq:adjProd) - \@ref(eq:Sgen))  
+(i)	Stock-recruit models fit to each of the 5 CUs to estimate CU-level S\textsubscript{gen} (Equation \@ref(eq:rickerSurv-IM) and Equations \@ref(eq:adjProd) - \@ref(eq:Sgen))  
 
-(ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being above Sgen (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
+(ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being aboveS\textsubscript{gen} (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
 
 
 We initially considered a third version of the logistic regression model, in which we used the Pacific Salmon Status Scanner to characterize CU status. Preliminary model evaluations led us to exclude this model due to poor fit. There were two factors limiting the establishment of a statistical relationship between the Pacific Salmon Status Scanner estimates of CU status and aggregate spawner abundance.  First, the Pacific Salmon Status Scanner relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to CU status estimates from the Salmon Scanner, there was a mismatch in the timing of abundance highs and lows.<!--CH: suggestion to focus entirely on weaker or non-existent relationship due to autocorrelation instead of the mixmatch. The mixmatch doesn't really matter for logsitic regression (and, a priori it's not immediately clear which one would be better, smoothed or unsmoothed), but the non-existent relationship does matter--> <!--CW: I am a bit confused, I think that the non-existent relationship happens because of the mismatch between the raw abundances and status below benchmark based on smoothed abundances, i.e. the raw abundance is high when status is red and low when status is not (yet) red  
-KH: My understanding is the same as Catarina's; the problem is that using smoothing for one and not the other creates a mis-match, and that we couldn;t use smoothing for both because of autocorrelation
--->. This mismatch lead to a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit, instead of raw annual abundance values, introduced considerable autocorrelation in statuses. Future explorations of aggregate abundance logistic regression-based LRPs based on the Pacific Salmon Status Scanner could account for the autocorrelation by including an AR(1) covariance structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model. 
+KH: My understanding is the same as Catarina's; the problem is that using smoothing for one and not the other creates a mis-match, and that we couldn;t use smoothing for both because of autocorrelation.
+CH (14 Dec): Okay, I see your points. Thanks for respdonding and I'm good leaving as is
+-->. This mismatch lead<!--led?--> to a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit, instead of raw annual abundance values, introduced considerable autocorrelation in statuses. <!--CH: perhaps we should omit this future research idea b/c if PSSS is based on trends over time, the autocorrelaion will be very large and I'm not sure would be meaningful within logistic regression?? I have not included it in the Guidelines paper "Recommendations section"-->Future explorations of aggregate abundance logistic regression-based LRPs based on the Pacific Salmon Status Scanner could account for the autocorrelation by including an AR(1) covariance structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model. 
 
-The second limiting factor in establishing a statistical relationship between the Pacific Salmon Status Scanner estimates of CU status and aggregate spawner abundance is that the Pacific Salmon Status Scanner includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the Pacific Salmon Status Scanner includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be below the absolute threshold despite high aggregate abundances.
+The second limiting factor in establishing a statistical relationship between the Pacific Salmon Status Scanner estimates of CU status and aggregate spawner abundance is that the Salmon Scanner includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the Pacific Salmon Status Scanner includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be below the absolute threshold despite high aggregate abundances.
 
 
 ***Retrospective Analysis***
@@ -264,7 +269,7 @@ To examine the effect of missing CUs on retrospective LRP estimates, we calculat
    (\#eq:status)
 \end{equation}
 
-where $nCUs$ is the number of CUs being used (3 or 4), $S_{i,t}$ is the abundance of natural-origin spawners returning to CU $i$ in year $t$ (including fish removed for brood), and $LRP'_t$ is the LRP calculated in year $t$ using only data from $nCUs$.  SMU-level status in a given year was calculated for all possible combinations of CUs available (5 combinations when nCUs = 4 and 10 combinations when nCUs = 3) to allow examination of the stability of status estimates among available combinations. Estimates of SMU status relative to LRPs were used to compare among missing CU scenarios instead of actual LRP estimates because the magnitude of the LRP will vary with the number and combination of CUs used. Since uncertainty estimates for spawner abundance series are not available, confidence intervals on LRP status are based solely on estimated 95% confidence intervals for the LRP. We evaluated the missing CU scenarios retrospectively for years 2017-2020.
+where $nCUs$ is the number of CUs being used (3 or 4)<!--or 5, for completeness, matching Fig of results>-->, $S_{i,t}$ is the abundance of natural-origin spawners returning to CU $i$ in year $t$ (including fish removed for brood), and $LRP'_t$ is the LRP calculated in year $t$ using only data from $nCUs$.  SMU-level status in a given year was calculated for all possible combinations of CUs available (5 combinations when nCUs = 4 and 10 combinations when nCUs = 3) to allow examination of the stability of status estimates among available combinations. Estimates of SMU status relative to LRPs were used to compare among missing CU scenarios instead of actual LRP estimates because the magnitude of the LRP will vary with the number and combination of CUs used. Since uncertainty estimates for spawner abundance series are not available, confidence intervals on LRP status are based solely on estimated 95% confidence intervals for the LRP. We evaluated the missing CU scenarios retrospectively for years 2017-2020.
 
 
 ### Results
@@ -304,7 +309,7 @@ knitr::include_graphics("figure/coho-ThreshAb2020-LogisticLRP.png")
 ```
 -->
 
-
+<!--CH: Does this table need to be updated based on Catarina's updated analyses?, Maybe not, as I think the new data-stream only impacted spawner times-series for assessments, not benchmarks per se-->
 
 \renewcommand*{\arraystretch}{1.5}
 \begin{table}
@@ -343,13 +348,11 @@ Table: (\#tab:logisticLRPs2020) Aggregate abundance based LRPs (with 95% confide
 -->
 ***Logistic Regression Diagnostics***
 
-Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models (Table \@ref(tab:logisticDiagIFC2020)). The assumptions of linearity and lack of large outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption (Table \@ref(tab:logisticDiagIFC2020)). An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2 standard deviations for all three models. Observations were also found to be independent at all year lags examined for all three models. 
+Logistic regression diagnostics showed that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models (Table \@ref(tab:logisticDiagIFC2020)). <!--CH possibly remove the next sentence since it's repeated above and below: The assumptions of linearity and lack of large outliers were met for all models.--> The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption (Table \@ref(tab:logisticDiagIFC2020)). An examination of deviance residuals did not show any large outliers, i.e., no residual values were greater than 2 standard deviations for all three models. Observations were also found to be independent at all year lags examined for all three models. 
 
 The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Pseudo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap model which had hit ratios ranging between 0.83 and 0.87 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 
-<!--CH: this table and above text does not appear correctly on the knitted  pdf version. I'm not sure why. Also, I broke up the 1 pgh above into a few smaller ones; feel free to revise
-
-
+<!--
 
 +-------------------------+--------------+-------------------+-----------------+
 | Diagnostic Test         | Sgen-Ricker  | Sgen-priorCap     | IFCRT
