--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -15,27 +15,31 @@ We consider two types of LRPs based on two different metrics:
 
 2) Aggregate abundance-based LRPs, which are based on total SMU-level spawning abundance. 
 
-While aggregate abundance-based LRPs are consistent with what is typically used for marine fish species, we propose that proportion-based LRPs are more appropriate for Pacific salmon SMUs in order to align with DFO's Wild Salmon Policy, WSP. 
+While aggregate abundance-based LRPs are consistent with what is typically used for marine fish species, we propose that proportion-based LRPs are more appropriate for Pacific salmon SMUs in order to align with DFO's Wild Salmon Policy, WSP<!-- LW: already defined WSP in ch 1, maybe use either Wild Salmon Policy or WSP?-->. 
 
 WSP assessments are typically intensive expert-driven processes and have only been completed for a small subset of CUs to date.  We demonstrate the application of the Pacific Salmon Status Scanner Tool (hereafter referred to as the 'Salmon Scanner') that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal *et al.*, in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). Applying this tool allows us to generate up-to-date estimates of CU status for all of our case study applications, and is recommended as a tool for defining LRPs in our companion working paper (Holt *et al.*, in review) <!--CH: omit?: ^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]-->. When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the Salmon Scanner better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the Salmon Scanner reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available for estimating lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt *et al.* (in review). 
 
-When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above red status. We use two methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt *et al.* (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt *et al.* (in review). <!--CH: I wonder if we can remove this next sentence as I think the topic is better captured in the Guidelines paper?--> While aggregate abundance-based LRPs can be used to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt *et al.* (in review)).
+When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above red status. We use two methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt *et al.* (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt *et al.* (in review). <!--CH: I wonder if we can remove this next sentence as I think the topic is better captured in the Guidelines paper?--> While aggregate abundance-based LRPs can be used to inform harvest control rules for fisheries management, more complex harvest control rules that include, for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt *et al.* (in review)).
 
 We also maintain consistency with the WSP by only including populations without significant enhancement when evaluating CU and SMU status. Populations where production is dominated by hatchery-origin fish, defined as systems with Proportionate Natural Influence (PNI) estimates <0.5 [@withlerGeneticallyBasedTargets2018] are excluded from analyses. In addition, for systems where time-series of the proportion of hatchery marked fish on the spawning grounds are available, these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  
 
 
 ## PROPORTION-BASED LRPS
 
-A proportion-based LRP is simply the proportion of CUs required to be assessed as being above red status. In all three case studies, we default to 100% of CUs being required to be above red status when setting the LRP. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having red status. Rationale for the choice of 100% of CUs required to be above red status in order for an SMU to be considered above its LRP is described in Holt *et al.* (in review).
+A proportion-based LRP is simply the proportion of CUs required to be assessed as being above red status. In all three case studies, we default to 100% of CUs being required to be above red status when setting the LRP. <!-- LW alternative: In all three case studies, we set an LRP requiring 100% of CUs to be above red status.--> In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having red status. Rationale for the choice of 100% of CUs required to be above red status in order for an SMU to be considered above its LRP is described in Holt *et al.* (in review).
 
 We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent WSP status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent Salmon Scanner status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., S\textsubscript{gen}, percentile-based benchmarks, etc.). While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between Salmon Scanner status assessments and statuses derived from abundances relative to lower benchmarks.
 
 When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. Generational smoothing integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks. This approach reduces noise in annual CU status determination due to annual fluctuations in CU abundances from any single cohort. It also makes our determination of CU status consistent with the approach taken for abundance-based benchmarks in WSP assessments and the Salmon Scanner tool.
 
 
-### Pacific Salmon Status Scanner {#rapidToolMethods}
+### PACIFIC SALMON STATUS SCANNER {#rapidToolMethods}
 
-One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using the Salmon Scanner that has recently been developed by DFO's State of the Salmon Program (Pestal *et al.*, in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). The Salmon  Scanner is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on a more regular basis than the time-intensive WSP assessment approach allows. The Salmon Scanner was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from previous WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]. The algorith was further ground-truthed with data and local expertise on assessed status for Fraser River Chum and Pink Salmon (Pestal *et al.* in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers. comm.). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. <!--CH suggestion: "In practice, results from Salmon Scanner will be validated against local expertise when implemented annually (S. Grant, pers. comm.)"-->
+One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms. We implement this approach using the Salmon Scanner that has recently been developed by DFO's State of the Salmon Program (Pestal *et al.*, in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). The Salmon  Scanner is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on a more regular basis than the time-intensive WSP assessment approach allows. The Salmon Scanner was developed using Classification and Regression Tree (CART) analyses to create algorithms and decision trees that approximate the status of the integrated assessments.  Data inputs and outcomes from previous WSP assessment processes were used in the CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]. The algorithm was further ground-truthed with data and local expertise on assessed status for Fraser River Chum and Pink Salmon (Pestal *et al.* in prep ). <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). As with other methods, an expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers. comm.). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. In practice, results from Salmon Scanner will be validated against local expertise when implemented annually (S. Grant, pers. comm.). 
+<!-- 
+LW: Do we want to say anything about how the decision tree we used could also be updated? 
+LW: Do we want to say anything about whether local experts could add nodes to the decision tree, e.g., for spatial distribution, impacts to wildlife, etc. as identified as imoprtant for CU status at the local level?)
+-->
 
 <!--
 CH comment on last sentence; "with the exception of Interior Fraser River Coho which has been vetted through the State of the Salmon program and local experts (Pestal *et al.* in prep)"
@@ -50,16 +54,6 @@ source("R/make_tree_diagram.R")
 knitr::include_graphics("figure/decision_tree.png")
 ```
 \end{landscape}
-
-
-<!-- Brendan's comment regarding the figure above:
-  Very hard to read in Res Doc b/c of size
-  CW: I changed the figure to landscape (not sure if CSAS allows that?) -- but I still think it is hard to read. Maybe we can increase font size?
-  -->
-
-<!--
-TO DO: Luke, can you please update this figure with updated SOTS decision tree.
--->
 
 
 The Salmon Scanner uses the most recent generational mean spawner abundance (calculated as a geometric mean) as a basis for comparison at each node of the decision tree, including when comparing against absolute abundance thresholds (e.g., 1500 spawners), abundance-based lower benchmarks (e.g., S\textsubscript{gen} or percentile), and abundance-based upper benchmarks (e.g., 0.8S\textsubscript{MSY} or percentile). Spawner abundances are also smoothed using generational averages prior to calculating trends in spawner abundance over time (Pestal *et al.*, in prep.).<!--CH remove after fist instance?: ^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.])  -->
