CH finished comments on CH6 of Case Study WP

--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -30,7 +30,7 @@ There are several disadvantages of the logistic regression-based LRPs. First, ou
 
 Second, logistic regression-based LRPs are limited to conditions that have been historically observed. This can be a problem when there is poor contrast in historical data, as was the case for WCVI Chinook.  In this case, there were no years when all component inlets were above their lower benchmarks. However, similar challenges could occur in cases where no CUs drop below their lower benchmarks.  The dependence on historically observed conditions is a further limitation if there have been changes in the correlation in populations dynamics among CUs over time such that current (or future) correlations are not represented by historical data.
 
-Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs were estimatable for interior Fraser Coho (average correlation within CUS of 0.43), but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of 0.12). Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
+Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs were estimatable for interior Fraser Coho (average correlation within CUS of 0.43), but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of 0.12). Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic regression-based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
 
 
 Similar to proportion-based LRPs, CUs without reliable data poses a problem for the estimation of logistic regression-based LRPs. When CUs abundances covary strongly, it may be possible to use data-rich CUs as indicators for data-limited CUs. However, in our case study on Interior Fraser River Coho, we found that logistic regression-based LRPs were more uncertain when more than 1 CUs was missing. 
@@ -40,16 +40,19 @@ Similar to proportion-based LRPs, CUs without reliable data poses a problem for 
 ### Projection based LRPs
 
 
-The projection-based LRPs approach relies on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of productivity and capacity, and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho study case, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook study case, Section \@ref(WCVIchinookChapter)). 
+Projection-based LRPs rely on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the emergent relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of stock-recruitment parameters, productivity and capacity, and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho case study, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook case study, Section \@ref(WCVIchinookChapter)). <!--CH suggested new text (Catarina and Kendra thoughts?) In other marine fisheries, tuning the OM is a critical component of simulation-evaluations. Does this count as 'tuning?'--> Furthermore, we demonstrated an approach to choosing parameters and model assumptions used in the projections so that correlations in spawner abundances in projections were similar to observed correlations.  We recommend that correlations in CUs within projections are explored under various model assumptions, and that model parameters are tuned to derive realistic correlations.
 
 The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics and consideration of alternative future scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and variability in exploitation among inlets. For the Interior Fraser Coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
 
 We also demonstrated that projection-based LRPs are sensitive to the assumed levels of exploitation in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability in stock-recruitment parameters among CUs increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(app:ERsensitivity-appendix). Therefore projection-based LRPs developed under historical and current exploitation rates cannot necessarily be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection-based LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives.
 
 
-<!--CH suggestion: Catarina and Kendra thoughts? "Furthermore, we demonstrated an approach to choosing parameters and model assumptions used in the projections so that correlations in spawner abundances in projections were similar to observed correlations.  We recommend that correlations in CUs within projections are explored under various model assumptions, and that model is tuned to derive realistic correlations."-->
 
-<!-- KH: (CH: I think the first three are captured, but could add the last if there is interest...?)
+
+
+
+
+<!-- KH: (CH: I think the first three are captured with some additions I made above, but could add the last if there is interest...?)
 
 I wonder if another discussion topic could be the dependence of LRP estimates on reliable estimates of CU status.    
 E.g.,:
