--- a/caseStudyWP/appendix-samSim.Rmd
+++ b/caseStudyWP/appendix-samSim.Rmd
@@ -10,6 +10,8 @@
 
 `samSim` is the closed loop simulation modelling tool used for calculation of the projection-based LRPs. An overview of `samSim` and the code can be found in the LRP project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). samSim has been previously used to evaluate harvest control rule performance relative to recovery potential ([@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]). We created a modified version of samSim to support LRP estimation for this paper. 
 <!-- KH comment: I have moved this here for now (was previously in chapter 2).  May wish to move again?? Or, put in the readme for the LRP branch of samSim?? 
+
+CH: I'm happy to leave it here. Thanks.
 -->
 Updated functionality for the LRP version of samSim include:
 
@@ -18,15 +20,13 @@ Updated functionality for the LRP version of samSim include:
 
 * The addition of a stock recruitment function that includes an environmental co-variate, as well as specification of future variability in the environmental co-variate (required for Interior Fraser Coho case study).
 
-* The option to initialize population dynamics for individual CUs at unfished equilibrium when no historical recruitment data are available. While this option would not be appropriate for projections aimed at estimating recovery from a current state, it can be used to estimate projection-based LRPs because we are only interested in the underlying relationship between aggregate abundance and the probability individual CUs will be above their lower benchmark.
+* The option to initialize population dynamics for individual CUs at unfished equilibrium when historical recruitment data are not available. While this option would not be appropriate for projections aimed at estimating recovery from a current state, it can be used to estimate projection-based LRPs because we are only interested in the underlying relationship between aggregate abundance and the probability individual CUs will be above their lower benchmark at equilbrium levels.
 
-* The option to include a log-normal bias-correction factor of $-\sigma^2 / 2$ to recruitment projected using one of the two available Ricker stock recruit models. This option was added to accommodate cases in which samSim is parameterized using stock recruitment parameters that have been corrected for log-normal bias to represent expected (mean) parameters. The log-nomral bias correction is commonly applied in stock recruit modelling because the expected value of *e*^$\sigma$ is *e*^$\sigma^2 / 2$} rather than zero when recruitment deviations are normally distributed (@coxCandidateLimitReference2019, @ohlbergerBayesianLifecycleModel2019, @olmosEvidenceSpatialCoherence2019, @forrestAssessmentPacificCod2020, ^[Weir, L.,*et al.* (in press). Recovery Potential Assessment for 11 Designatable Units of Chinook Salmon, Oncorhynchus tshawytscha, Part 2: Elements 12 to 22. DFO Can. Sci. Advis. Sec. Res. Doc.  viii + 126 p.]. When input parameters have been corrected for this log-normal bias, the bias correction must also be added to projections.  We use a log-normal bias correction factor for all of our case study analyses.
-
-<!--CH: need footnote for Weir et al. (in press) , CW added-->
+* The option to include a log-normal bias-correction factor of $-\sigma^2 / 2$ to recruitment projected using one of the two available Ricker stock recruit models. This option was added to accommodate cases in which samSim is parameterized using stock recruitment parameters that have been corrected for log-normal bias to represent expected (mean) parameters. The log-nomral bias correction is commonly applied in stock recruit modelling because the expected value of *e*^$\sigma$ is *e*^$\sigma^2 / 2$} rather than zero when recruitment deviations are normally distributed (@coxCandidateLimitReference2019, @ohlbergerBayesianLifecycleModel2019, @olmosEvidenceSpatialCoherence2019, @forrestAssessmentPacificCod2020, ^[Weir, L., et al. (in press). Recovery Potential Assessment for 11 Designatable Units of Chinook Salmon, Oncorhynchus tshawytscha, Part 2: Elements 12 to 22. DFO Can. Sci. Advis. Sec. Res. Doc.  viii + 126 p.]. When input parameters have been corrected for this log-normal bias, the bias correction must also be added to projections.  We use a log-normal bias correction factor for all of our case study analyses.
 
 * Specification of variability in exploitation rates as a function of both variability among years and variability among CUs.
 
-This appendix describes the `samSim` model equations and the model's internal logic. We focus on providing detailed descriptions of the modeling options used for LRP study cases but include brief mentions of other model extensions already implemented within `samSim`. `samSim` includes two population scales, it could be applied to one Conservation Unit (CU) with component spawning populations, or one Stock Management Unit (SMU) with component CUs, or even one region with component SMUs. For the projection-based LRP analysis two SMUs and their component CUs were used as study cases: the West Coast of Vancouver Island (WCVI) Chinook SMU (with five CUs) and the Interior Fraser Coho Salmon SMU (with three CUs). The following sections in this appendix are organized similarly to the `samSim` code, for this reason the subheadings of this appendix can be read as pseudo code. The simulation model has two main phases: Model Priming and Projections. The model priming phase recreates data for past years, either by populating objects with observed data or by generating population trends based on input parameters. The projection phase generates data for future years based on the input data and parameters as well as the user defined scenarios and management procedures. The model indexes are defined in Table \@ref(tab:indtab), the model parameters and model input are defined in Table \@ref(tab:paramtab) and the modeled quantities are defined in Table \@ref(tab:modtab). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
+This appendix describes the `samSim` model equations and the structure. We focus on providing detailed descriptions of the modeling options used for LRP study cases but include brief mentions of other model extensions already implemented within `samSim`. `samSim` includes two population scales, which can be applied to one Conservation Unit (CU) with component spawning populations or one Stock Management Unit (SMU, referred to as Management Unit, MU in the `samSim` code and this Appendix) with component CUs. <!--CH: I suggest leaving this last option out as I'm not sure SR model would be biologically meaningful at those large spatial scales, ", or one region with component SMUs."--> For the projection-based LRP analysis two SMUs and their component CUs were used as study cases: the West Coast of Vancouver Island (WCVI) Chinook SMU (with five CUs) and the Interior Fraser Coho Salmon SMU (with three CUs). The following sections in this appendix are organized similarly to the `samSim` code, for this reason the subheadings of this appendix can be read as pseudo code. The simulation model has two main phases: Model Priming and Projections. The model priming phase recreates data for past years, either by populating objects with observed data or by generating population trends based on input parameters. The projection phase generates data for future years based on the input data and parameters as well as the user defined scenarios and management procedures. Model indicies are defined in Table \@ref(tab:indtab), model parameters and inputs are defined in Table \@ref(tab:paramtab) and the modeled quantities are defined in Table \@ref(tab:modtab). Detailed definitions of the input data and parameters are provided in the repository's [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme) file. 
 
 
 \begin{table}[ht]
@@ -50,7 +50,7 @@ $n$ & Nation: U.S. or Canada \\
 \end{table}
 
 
-
+<!--CH: I added 1/spawners at maximum recruitment to beta defn.-->
 
 \begin{longtable}[]{l p{13.5cm}}
 \caption{List of \texttt{samSim} model parameters and user input variables.}\\
@@ -59,10 +59,10 @@ Notation & Definition \\
 \hline
 \endhead
 $\alpha_{i}$ & Ricker productivity parameter \\
-$\beta_{i}$ & Ricker inverse capacity parameter \\
+$\beta_{i}$ & Ricker inverse capacity parameter or 1/spawners at maximum recruitment \\
 $\sigma_{i}$ & Standard deviation for recruitment error\\ 
 $\rho$ & Temporal autocorrelation coefficient in recruitment residuals\\
-$\gamma$ & Survival covariate scaler \\
+$\gamma$ & Survival covariate scalar \\
 $covMat$ & Covariance matrix used to generate recruitment deviations with correlation among CUs\\
 $\overline{ER}_{n}$ & Nation specific long term average exploitation rate\\
 $\overline{p}_{i,j}$ & Mean proportions of recruits at age\\
@@ -86,6 +86,7 @@ $\hat{\beta}_{y,i}$ & Estimated Ricker inverse capacity parameter \\
 
 
 
+
 \begin{longtable}[]{l p{13.5cm}}
 \caption{List of \texttt{samSim} model variables.}\\
 \hline
@@ -98,7 +99,7 @@ $Seq_{i}$ & Equilibrium spawners\\
 $RY_{y,i}$ & Calendar year recruitments\\
 $p_{y,i,j}$ & Proportions of returns at age\\
 $R_{y,i}$ & Brood year recruits \\
-$Ra_{y,i,j}$ & Age spaecific brood year recruits\\
+$Ra_{y,i,j}$ & Age specific brood year recruits\\
 $w_{y,i}$ & Recruitment deviations with temporal auto-correlation\\
 $v_{y,i}$ & Recruitment deviations\\
 $sv_{y,j}$ & Brood year survival covariate\\
@@ -140,17 +141,17 @@ ${obsER}_{y,i,n}$ & Observed exploitation rates \\
 ## MODEL PRIMING
 
 
-The priming phase, or model initialization, represents the past data for CUs being modeled. It is used to represent true and observed abundances before starting the projection trials. This phase loops over a number of past years ('nPrime') and reconstructs recruitment time series for past years. The simulations can be initialized in two ways: with existing recruitment data or with user defined parameters, if recruitment data is not available.  
+The priming phase, or model initialization, represents the past data for CUs being modeled. It is used to represent true and observed abundances before starting the projection trials. This phase loops over a number of past years ('nPrime') and reconstructs recruitment time series for past years. The simulations can be initialized in two ways: with existing recruitment data or with user defined parameters, if recruitment data are not available.  
 
-### Recruitment data is available
+### Recruitment data are available
 
-If spawner-recruitment data is available, the number of initialization years 'nPrime' is defined based on the length of the longest CU time series available. The spawners, recruits, catch and exploitation rate objects are populated with the input data. If catch and/or exploitation rate data are not available, those values are set to zero.
+If spawner-recruitment data are available, the number of initialization years 'nPrime' is defined based on the length of the longest CU time series available. The spawners, recruits, catch and exploitation rate objects are populated with the input data. If catch and/or exploitation rate data are not available, those values are set to zero.
 
-### Recruitment data is not available
+### Recruitment data are not available
 
-When Recruitment data is not available, the 'nPrime' is set to 10 times the maximum age of recruits. The first step on this routine is to retrieve the stock recruitment parameters. The user has the option of providing either one set of values to be used across all trials or many sets of parameter estimates, tipically from MCMC samples. If MCMC samples are provided, a different set of parameters is used for each simulation trial.
+When Recruitment data are not available, the 'nPrime' is set to 10 times the maximum age of recruits. The first step on this routine is to retrieve the stock recruitment parameters. The user has the option of providing either one set of values to be used across all trials or many sets of parameter estimates, typically from MCMC samples. If MCMC samples are provided, a different set of parameters is used for each simulation trial.
 
-The spawner recruitment parameters can be altered according to the user defined scenarios, e.g. to simulate regime shifts. `samSim` includes options to adjust the productivity parameter, $\alpha_{i}$, the capacity parameter $\beta_{i}$, and the recruitment standard deviations, $\sigma_{i}$. The LRP case studies do not include adjustments or changes in productivity over time, therefore we will not describe the parameter adjustment options in this appendix. Recruitment is assumed to be correlated between the CUs, the covariance matrix is calculated based on the variance-covariance matrix, which is calculated based on CU-specific recruitment variances, and the correlation matrix specified in an input files.   
+The stock-recruitment parameters can be altered according to the user defined scenarios, e.g., to simulate regime shifts. `samSim` includes options to adjust the productivity parameter, $\alpha_{i}$, the capacity parameter $\beta_{i}$, and the recruitment standard deviations, $\sigma_{i}$. The LRP case studies do not include adjustments or changes in productivity over time, therefore we will not describe the parameter adjustment options in this appendix. Recruitment is assumed to be correlated between the CUs, where the variance-covariance matrix is calculated based on CU-specific recruitment variances and the correlation matrix in recruitment residuals specified in an input files.   
  
 Once stock-recruitment parameters are defined, the number of spawners is initialized. The number of spawners is set at equilibrium for the first 6 years (the maximum possible number of age classes) and then calculated based on recruitment and exploitation rates in the previous years (Equation \@ref(eq:Seqinit)). If the calculated number of spawners is lower than the user inputted extinction threshold, then the number of spawners is set to zero. Recruitment error is given by a multivariate normal distribution reflecting the recruitment covariance among CUs. 
 
@@ -250,12 +251,15 @@ Recruitment numbers produced with either formulation of the Ricker model are cap
   (\#eq:reccapscalar)
 \end{align}
 
+<!--CH addition below-->
+Although in our implementation of `samSim` for Interior Fraser Coho with marine survival covariate, data were used to prime the model, equations for simulating dynamics during this period are provided here for completeness. The equations for simulating population dynamics are also used in the projection phase of the model (see below).
+
 ### Compute management quantities and benchmarks
 
 In the priming loop, the management quantities and benchmarks are only calculated in the last two generations. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". `samSim` has the capability of estimating management quantities and benchmarks on a yearly basis, relying on the data obtained from the beginning of the time series to the current simulation year. However for the purpose of the LRP study cases, time invariant management benchmarks were used. For this reason we omit the time index, $y$, from the notation used for the management quantities. 
 
  
-If the "stockRecruit" option is used, the management quantities are $Smsy_{y,i}$ and $Sgen_{y,i}$ calculated based on the stock-recruitment parameters. When the model with the survival covariate is used, the $\alpha_{i}$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the long term average of the survival covariate is used. $Smsy_{i}$ is calculated following the explicit solution provided by @scheuerellExplicitSolutionCalculating2016 using the Lambert W function (Equation  \@ref(eq:smsysamsim)). $Sgen_{i}$ is estimated by solving Equation \@ref(eq:Sgensamsim) numerically, as described by @holtIndicatorsStatusBenchmarks2009. The Lower management benchmark is set to $Sgen_{y,i}$ and the upper benchmark is set to 80\% of $Smsy_{y,i}$.
+If the "stockRecruit" option is used, the management quantities are $Smsy_{y,i}$ and $Sgen_{y,i}$ calculated based on the stock-recruitment parameters. When the model with the survival covariate is used, the $\alpha_{i}$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the long term average of the survival covariate is used. $Smsy_{i}$ is calculated following the explicit solution provided by @scheuerellExplicitSolutionCalculating2016 using the Lambert W function (Equation  \@ref(eq:smsysamsim)). $Sgen_{i}$ is estimated by solving Equation \@ref(eq:Sgensamsim) numerically, as described by @holtIndicatorsStatusBenchmarks2009a. The Lower management benchmark is set to $Sgen_{y,i}$ and the upper benchmark is set to 80\% of $Smsy_{y,i}$.
 
 
 \begin{align}
@@ -284,7 +288,7 @@ If the "percentile" benchmark option is chosen, the upper benchmark is set to th
 
 ### Infill missing data
 
-The last step of  the model priming is infilling, which is only relevant if stock recruitment data is available and there are gaps in the last 12 years of the time series. Any gaps in the last 12 years of the Spawners and Recruits time series are infilled with a geometric mean of the entire priming period. In the priming phase, we assume that all variables are known without error, therefore all observations are set to the true simulation values, i.e., no observation error is added. 
+The last step of  the model priming is infilling, which is only relevant if stock recruitment data are available and there are gaps in the last 12 years of the time series. Any gaps in the last 12 years of the Spawners and Recruits time series are infilled with a geometric mean of the entire priming period. In the priming phase, we assume that all variables are known without error, therefore all observations are set to the true simulation values, i.e., no observation error is added. 
 
 
 ## MODEL PROJECTIONS
