minor edits ch4 guidelines

--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -3,7 +3,7 @@
 
 We applied candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies to demonstrate the application of candidate methods, evaluate sensitivity of LRPs to various assumptions, and inform the guidelines presented in Section \@ref(guidelines).  The case studies were Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inner South Coast Chum Salmon  (*Oncorhynchus keta*)- excluding Fraser, each comprising of 3-7 CUs<!--CH: latin names for other salmon species provided at first instance in Ch1. Chum salmon not mentioned in that chapter-->. These were chosen because they varied in data types and availabilities ranging from data-rich (Interior Fraser River Coho) to data-limited (Inner South Coast Chum), to represent a range of SMUs that may require LRPs. Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum) and two are included in the proposed first batch of stocks to be put under regulation for the Fish Stock provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. More thorough descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, are available in Holt et al. (in review). An overview of the approaches applied are provided in Table \@ref(tab:lrpapproaches). <!--CH: To add, drafted in "Table of LRP approaches.docx". Table 1. Approaches used to estimate LRPs for each case study (a) and CU assessment methods applied (b).-->
 
-<!--CW work in progress in the table below -->
+
 \renewcommand*{\arraystretch}{1.4}
 \begin{table}[!htbp]
 \centering
@@ -92,14 +92,14 @@ Biological benchmarks have been estimated for WCVI indicator stocks using an emp
 
 We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportion-based LRPs and projection-based LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the red zone, so it was not possible to identify logistic regression-based LRPs.  Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide projection-based LRPs for demonstration purposes. We implemented sensitivity analyses on projection-based LRPs to two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in productivity, and capacity are provided in an Appendix to Holt et al. in (review).
 
-In this case study, we found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection-based were also highly sensitivity to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) from this value resulted in <!--remove:relatively--> large changes in LRPs estimates. 
+In this case study, we found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection-based LRPs were also highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) from this value resulted in <!--remove:relatively--> large changes in LRPs estimates. 
 
 
 ## INNER SOUTHCOAST CHUM - NON FRASER
 
 The 'Inside South Coast Chum - Non-Fraser' (ISC-NF Chum) SMU includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(density-cor-plot)). <!--CH comment: check this average value against data to be added to the plot. I pulled it from a bubble plot of cor's from a ppt. -->
 
-The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions, and recruitment are too unreliable for quantitative inclusion in stock assessments for this SMU.  Instead,  benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed hatchery-dominated systems (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72). Times-series of proportion of hatchery-origin spawners were not available and so total spawner abundances were used for assessment.
+The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions, and recruitment are too unreliable for quantitative inclusion in stock assessments for this SMU.  Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed hatchery-dominated systems (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72). Times-series of proportion of hatchery-origin spawners were not available and so total spawner abundances were used for assessment.
 
 For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportion-based LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportion-based LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression-based LRPs for this SMU.
 
